assets/theme/css/ps-theme.css
/******************/
/* Styles to override the defaults in the huxley app and its mini-bootstrap file */
/* Only un-comment a line if you wish to change it. */
/******************/

/* SPA css */

:root {
	--psorange: #f7c325;
	--psgrey: #232628;
}

#huxley-container {
	background: linear-gradient(#2B3D4B, #13191E) !important;
}
/* #huxley-app .text-primary {color: rgb(255,165,0);} */
/* #huxley-app .bg-primary {background-color: #007bff;} */
/* #huxley-app .bg-light {background-color: #f8f9fa;} */
/* #huxley-app .text-white { color: white; } */

#huxley-app {
	/* font-family: Avenir, Helvetica, Arial, sans-serif; */
	padding: 1rem 0.8rem 2rem;
	font-size: 1.2rem;
	background-color: #232628;
	/* color: #2c3e50; */
	color: white;
	text-align: justify;
}
#huxley-app .view-container {
	max-width: 1024px;
	margin: auto;
}

#huxley-app .mr-2 {
	margin-right: 0.5rem;
}
#huxley-app .btn-block {
	display: block;
	width: 100%;
}
#huxley-app title {
	font-size: 2rem;
}
#huxley-app p {
	line-height: 16pt;
}

/* SPA Custom Menu */

:not(body.huxley-authenticated) .huxley-signin {
	display: initial !important;
}
:not(body.huxley-authenticated) .huxley-myaccount {
	display: none !important;
}

body.huxley-authenticated .huxley-signin {
	display: none !important;
}
body.huxley-authenticated .huxley-myaccount {
	display: initial !important;
}


/************ Comp List **********************/
#huxley-app .grid-list>li {
	width: 32%;
}
#huxley-app .competition-list>h3, #huxley-app .drawn-page>h3, #huxley-app h3.title, #huxley-app .title  {
	text-transform: uppercase;
	text-align: center;
	font-weight: 700;
}
@media (max-width:720px) {
	#huxley-app .grid-list>li {
		width: 49%;
	}
}
@media (max-width:515px) {
	#huxley-app .grid-list>li {
		width: 96%;
	}
}
#huxley-app .huxley-card {
	display: flex;
	flex-direction: column;
	width: 100%;
	/* height: 400px; */
	/* margin: 1rem; */
	position: relative;
	border-radius: 10px;
}
#huxley-app .huxley-card .card-img-top {
	width: 100%;
	height: 21rem !important;
	-o-object-fit: cover;
	object-fit: cover;
	background-color: white;
	border-top-left-radius: 10px;
	border-top-right-radius: 10px;
}
#huxley-app .huxley-card .card-details {
	position: relative;
	height: 110px;
	border-bottom-right-radius: 10px;
	border-bottom-left-radius: 10px;
	background: #383838;
	color: white;
}
#huxley-app .huxley-card .card-details .card-body {
	padding: 0;
	flex-grow: 1;
	border-top: solid 1px grey;
	color: white;
	min-height: 60px;
}
#huxley-app .huxley-card .card-title {
	font-weight: 700;
	text-align: center;
	padding: 0px 5px;
	color: #f7c325;
}
#huxley-app .huxley-card .card-details hr {
	display: none;
}
#huxley-app .huxley-card .stats-row {
	display: flex;
	justify-content: space-between;
	padding: 10px 15px;
	/* color: white; */
	border-top: 1px solid #0005;
	position: absolute;
	bottom: 0px;
	width: 100%;
}
.close-date::before {
	content: "Ends ";
}
#huxley-app .view-container .huxley-card .ticket-price {
	display: block;
}
#huxley-app .close-date-wrap {
	background: #f7c325;
	/* border-radius: 10px 10px 0px 00px; */
	position: absolute;
	width: 100%;
	top: -24px;
	font-weight: 500;
	text-align: center;
}

/*************** Comp Detail page ***********************/
#huxley-app .competition-detail {
	background: white;
	color: black;
	padding: 10px;
	border-radius: 10px;
}
#huxley-app .competition-detail p {
	text-align: left;
}
@media (max-width:576px) {
	#huxley-app .competition-detail {
		border-radius: 0;
	}
}
#huxley-app .view-container .ticket-price {
	display: flex;
	align-items: center;
	background: rgba(235,235,235,0.87);
	color: #2c3e50; 
	border-radius: 30px;
	font-weight: bold;
	padding: 3px 14px 3px 3px;
	position: absolute;
	top: 8px;
	left: 8px;
	bottom:auto;
	right: auto;
	border: 0;
	font-size: 16px;
}
#huxley-app .ticket-price i {
	background-color: #f7c325;
	border-radius: 50%;
	padding: 5px;
	margin-right: 0.5rem;
}

#huxley-app .competition-detail .right-column>div {
	background-color: #232628;
	border-radius: 10px;
	padding: 1.5rem;
	padding-bottom: 1px;
	color: white;
}
#huxley-app .competition-detail .right-column>div	.countdown-timer {
	/* margin-top: 1rem; */
}

#huxley-app .tickets-left-title {
	text-transform: capitalize;
}

#huxley-app .closing-date {
	font-weight: bold;
}

#huxley-app .competition-detail .ticket-price, #huxley-app .competition-detail .ticket-price .fa-coins {
	font-size: 1.5rem;
	text-transform: uppercase;
}

/************ DRAWN COMPETITIONS PAGE ***************************/

#huxley-app .drawn-page .winners-list>li {
	background: white;
	border-radius: 10px;
	padding: 1rem;
	color: black;
}
@media (max-width:575px) {
	#huxley-app .drawn-page .winners-list>li {
		border-radius: 0px;
	}
}
#huxley-app .drawn-page .winners-list p {
	margin-bottom: 0;
	text-align: center;
	font-size: 16pt;
}
#huxley-app .drawn-page .winners-list h4 {
	text-transform: uppercase;
	/* color: #f7c325; */
	font-weight: bold;
}
#huxley-app .drawn-page .winner-img {
	margin: 0 0 0.5rem;
}
#huxley-app .load-more {
	text-align: center;
	width: 100%;
	position: absolute;
}

#huxley-app .video-thumbnail .fa-circle-play {
	color: #f7c325;
}
#huxley-app .video-thumbnail .icon-overlay {
	transform: rotate(-3deg);
}

#huxley-app .video-thumbnail {
	height: unset !important;
}

#huxley-app .video-thumbnail, #huxley-app .winner-img {
	margin-bottom: 15px;
	margin-top: 15px;
	border: 3px solid #f7c325;
}

#huxley-app .video-thumbnail {
	transform: rotate(-3deg);
}

#huxley-app .winner-img {
	transform: rotate(1deg);
}

/**************** FAQ PAGE *************************/
#huxley-app section.faq-question {
	background-color: white;
	border-radius: 10px;
	padding: 1rem;
	margin: 16px 0;
	color: black;
	text-align: left;
}
#huxley-app .faq-question h4 {
	margin: 0;
}
#huxley-app .faq-question h4 {
	margin: 0;
	max-width: 94%;
}
#huxley-app .faq-question p {
	margin: 1rem 0 0 0;
}
#huxley-app .faq-question hr {
	border: 0; margin: 0;
	height: 0;
}
#huxley-app section.collapsed h4::after, #huxley-app section.expanded h4::after {
	border-radius: 500px;
    	background: var(--psorange);
	text-align: center;
	position: absolute;
    	right: 20px;
	-webkit-transition: all 0.3s linear;
    	-moz-transition: all 0.3s linear;
    	-o-transition: all 0.3s linear;
    	transition: all 0.3s linear;
	font-family: FontAwesome;
	display: inline-block;
	text-decoration: inherit;
}
#huxley-app section.collapsed h4::after {
	content: "\f055";
}
#huxley-app section.expanded h4::after {
	content: "\f055";
	transform: rotate(45deg);
}
#huxley-app .faq-question h4::after {
	animation-duration: 2s;
}
/********* Terms Page *****************/
#huxley-app .terms-box2 {
	border-radius: 10px;
	padding: 10px !important;
}

/********* Registration Page *****************/
#huxley-app .registration-page section {
	background: white;
	color: black;
	border-radius: 10px;
	padding: 1rem;
}
/********* Challenge Page ********************/
#huxley-app .challenge-view {
	/* background: white;
	color: black;
	padding: 0 10px 10px 10px;
	border-radius: 10px; */
}
#huxley-app .question-box {
	border: 2px solid #f7c325 !important;
	background: #f7c325 !important;
	color: black;
	border-radius: 10px;
	border: 0;
	padding: 2rem;
}
#huxley-app .question-box h4 {
	font-weight: 700;
	text-align: center;
}
#huxley-app .questions {
	font-weight: 500;
	font-size: 120%;
}
#huxley-app .challenge-view p {
	text-align: center;
}
#huxley-app .challenge-view .hero-banner img, #huxley-app .competition-entered .hero-banner img {
	border-radius: 10px;
}

/********* My Account Page *******************/
#huxley-app .my-account {
	background: white;
	color: black;
	border-radius: 10px;
	border: 0;
	padding: 2rem;
}
#huxley-app .account-side-menu {
	background: #EEE;
	padding: 20px;
	margin-bottom: 2rem;
}
#huxley-app .account-side-menu .nav-item {
		color: #2c3e50;
}
#huxley-app .account-side-menu .nav-item.active {
	color: #f7c325;
	border-left: 3px solid #f7c325;
}

/****************** Wallet - Tranaction Table */
#huxley-app .transaction-table tbody tr.debit {
	background-color: #f8e7e7 !important;
}
#huxley-app .transaction-table tbody tr.credit {
	background-color: #e7f8e9 !important;
}
#huxley-app .transaction-table tbody {
	font-size: 15px;
}

/************* Signed Out page **************************/
#huxley-app .signed-out {
	background: white;
	color: black;
	padding: 10px;
	border-radius: 10px;
	margin: 0 10px;
}
/************* Delete account page **************************/
#huxley-app .delete-account .btn[type=button] {
	margin-right: 1rem;
}

/*-----------------------------------------------------*/
#huxley-app .login-box {
	background-color: white;
	color: black;
	border-radius: 10px;
	padding: 2rem;
	margin-top: 3rem;
}

/****** Coin count nav bar *****************************/

#coin-nav {
	display: none;
}

.huxley-authenticated #coin-nav {
	display: initial;
}

#huxley-app .coin-nav {
	width: 300px;
	margin: 0;
	background: #f7c325;
    	position: fixed;
	left: -90px;
    	top: 99px;
	z-index: 10;
   	padding: 10px 29px 10px 0px;
    	text-transform: uppercase;
	text-align: right;
    	border-radius: 0px 50px 50px 0px;
	animation-duration: 4s;
	animation-name: bobbing;
	animation-iteration-count: infinite;
	animation-timing-function: ease-in-out;
	transition: transform 0.5s ease-in-out, left 0.5s ease-in-out;
}

@keyframes bobbing {
	0% {transform: translateX(-165px);}
	50% {transform: translateX(-185px);}
	100% {transform: translateX(-165px);}
}

#huxley-app .coin-nav:hover, #huxley-app .coin-nav:focus {
	left: 50px;
	animation-play-state: paused;
	/* animation-duration: 1s;
	animation-name: slideout;
    	animation-timing-function: ease-in-out;
	animation-iteration-count: 1;
	animation-fill-mode: both; */
}

@keyframes slideout {
	0% {left: -90px;}
	100% {left: 0px;}
}

#huxley-app .coin-nav .nav-link {
	padding: 0.3rem 0 0.3rem 1rem;
}

#huxley-app .coin-nav .nav-link {
	color: #232628;
}

#huxley-app .coin-nav .nav-link:hover, #huxley-app .coin-nav .nav-link:focus {
	color: white;
}

#huxley-app .coin-nav .fa-coins::after {
	content: "\f555";
    	transform: rotate(-30deg);
    	transform-origin: center;
    	display: inline-block;
    	-webkit-transform: rotate(-30deg);
    	-moz-transform: rotate(-30deg);
    	-ms-transform: rotate(-30deg);
    	-o-transform: rotate(-30deg);
	font-family: "Font Awesome 6 Free";
}

#huxley-app .coin-nav .fa-coins::before {
	display: none;
}

#huxley-app .coin-nav i {
	float: right;
	padding-left: 15px;
    	margin-right: 0;
	position: relative;
    	right: -10px;
}

/****** custom nav bar */
#custom-html-85 div {
    background-color: #232628;
    text-align: center;
    padding-bottom: 15px;
    padding-top: 15px;
    border-bottom: 5px solid #f7c325;
    font-size: 150%;
    /* color: #232323; */
}

#share3-4u {
	padding-top: 0;
	padding-bottom: 1.8rem;
	background-color: #232628;
}
/* Primary Buttons */
#huxley-app .btn-primary, #huxley-app .btn-secondary {
	color: white; 
	background-color: #007bff;
	border-color: #007bff;
	border-radius: 100px;
	text-transform: uppercase;
}
#huxley-app .btn-primary:hover {
	background-color: #0069d9;
	border-color: #0069d9;  
}
#huxley-app .btn-primary:focus{
	box-shadow: 0 0 0 0.2rem rgba(#007bff, .25);
}
#huxley-app .btn-primary:not(:disabled):active {
	background-color: #0062cc; 
}
#huxley-app .btn-primary:disabled:hover {
	background-color: #007bff;
	border-color: #007bff;
}

/* Secondary Buttons */
/* #huxley-app .btn-secondary {
	color: white; 
	background-color: #6c757d;
	border-color: #6c757d;
}
#huxley-app .btn-secondary:hover {
	background-color: #5a6268;
	border-color: #5a6268; 
}
#huxley-app .btn-secondary:focus{
	outline: 0;
	box-shadow: 0 0 0 0.2rem rgba(#6c757d, .25);
}
#huxley-app .btn-secondary:not(:disabled):active {
	background-color: #545b62
}
#huxley-app .btn-secondary:disabled:hover {
	background-color: #6c757d;
	border-color: #6c757d;
} */

